--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,24 +1,24 @@
 name: Run self.py
 
 on:
-  workflow_dispatch:  # برای اجرای دستی از GitHub
+  workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt || echo "No requirements.txt found"
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt || echo "No requirements.txt found"
 
-    - name: Run self.py
-      run: python self.py
+      - name: Run self.py
+        run: python self.py
